Dirvish uses the output of 'hostname' to check if we mean the local host
So we use that as default value. It might differ from grains['host'] in
some situations.

--- a/dirvish/files/vault.conf
+++ b/dirvish/files/vault.conf
@@ -1,6 +1,6 @@
 {%- from 'dirvish/config.jinja' import render_config -%}
 # Vault configuration file managed by salt (via pillar {{ pillar_prefix }})
 # Do not edit manually
-client: {{ salt['pillar.get'](pillar_prefix + ':client', grains['host']) }}
+client: {{ salt['pillar.get'](pillar_prefix + ':client', salt['cmd.run_stdout']('hostname')) }}
 tree: {{ salt['pillar.get'](pillar_prefix + ':tree', '/') }}
 {{ render_config(pillar_prefix, ['client', 'tree', 'meta']) }}
